crates/rome_formatter/tests/specs/prettier/cursor/cursor-1.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: cursor-1.js

---
# Input
```js
(function(){return        <|>15})()

```

# Output
```js
(function () {
  return <|>15;
})();

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ cursor-1.js:1:27
  │
1 │ (function(){return        <|>15})()
  │                           ^^^^^ TypeScript only syntax


```


